依赖结构优化